syntax = "proto3";
package clientdebugrpc;

option go_package = "debug/clientdebugrpc/clientdebugrpcproto";

service ClientApi {
    rpc CreateSpace(CreateSpaceRequest) returns(CreateSpaceResponse);
    rpc DeriveSpace(DeriveSpaceRequest) returns(DeriveSpaceResponse);
    rpc CreateDocument(CreateDocumentRequest) returns(CreateDocumentResponse);
    rpc DeleteDocument(DeleteDocumentRequest) returns(DeleteDocumentResponse);
    rpc AddText(AddTextRequest) returns(AddTextResponse);
    rpc DumpTree(DumpTreeRequest) returns(DumpTreeResponse);
    rpc TreeParams(TreeParamsRequest) returns(TreeParamsResponse);
    rpc AllTrees(AllTreesRequest) returns(AllTreesResponse);
    rpc AllSpaces(AllSpacesRequest) returns(AllSpacesResponse);
    rpc LoadSpace(LoadSpaceRequest) returns(LoadSpaceResponse);
    rpc Watch(WatchRequest) returns(WatchResponse);
    rpc Unwatch(UnwatchRequest) returns(UnwatchResponse);
    rpc PutFile(PutFileRequest) returns(PutFileResponse);
    rpc GetFile(GetFileRequest) returns(GetFileResponse);
    rpc DeleteFile(DeleteFileRequest) returns(DeleteFileResponse);
}

message CreateSpaceRequest {
}

message CreateSpaceResponse {
    string id = 1;
}

message DeriveSpaceRequest {
}

message DeriveSpaceResponse {
    string id = 1;
}

message CreateDocumentRequest {
    string spaceId = 1;
}

message CreateDocumentResponse {
    string id = 1;
}

message DeleteDocumentRequest {
    string spaceId = 1;
    string documentId = 2;
}

message DeleteDocumentResponse {
}

message AddTextRequest {
    string spaceId = 1;
    string documentId = 2;
    string text = 3;
    bool isSnapshot = 4;
}

message AddTextResponse {
    string documentId = 1;
    string headId = 2;
    string rootId = 3;
}

message DumpTreeRequest {
    string spaceId = 1;
    string documentId = 2;
}

message DumpTreeResponse {
    string dump = 1;
}

message AllTreesRequest {
    string spaceId = 1;
}

message Tree {
    string id = 1;
    repeated string heads = 2;
}

message AllTreesResponse {
    repeated Tree trees = 1;
}

message AllSpacesRequest {
}

message AllSpacesResponse {
    repeated string spaceIds = 1;
}

message LoadSpaceRequest {
    string spaceId = 1;
}

message LoadSpaceResponse {
}

message TreeParamsRequest {
    string spaceId = 1;
    string documentId = 2;
}

message TreeParamsResponse {
    string rootId = 1;
    repeated string headIds = 2;
}

message WatchRequest {
    string spaceId = 1;
    string treeId = 2;
}

message WatchResponse {
}

message UnwatchRequest {
    string spaceId = 1;
    string treeId = 2;
}

message UnwatchResponse {
}

message PutFileRequest {
    string path = 1;
    string spaceId = 2;
}

message PutFileResponse {
    string hash = 1;
}

message GetFileRequest {
    string hash = 1;
    string path = 2;
}

message GetFileResponse {
    string path = 1;
}

message DeleteFileRequest {
    string hash = 1;
}

message DeleteFileResponse {}